# endyn

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  codecov.yml  environment.yml  setup.py
devtools/conda-envs/: linux-gnu.yaml  linux-intel.yaml
docs/source/: conf.py  endyn.configint.rst  endyn.integrators.rst  endyn.lib.rst  endyn.linalg.rst  endyn.rst  endyn.utils.rst  index.rst  modules.rst
endyn/: CMakeLists.txt  __init__.py
endyn/cmake/: clang-cxx-dev-tools.cmake
endyn/configint/: __init__.py  bitstrings.py  cisd.py  rcisd.py
endyn/integrators/: __init__.py  cranknicholson.py  rungekutta.py
endyn/lib/: CMakeLists.txt  __init__.py
endyn/lib/bindings/: py_endyn.cc  py_integrators.cc
endyn/lib/cmake/: autocmake_omp.cmake
endyn/lib/integrators/: cranknicholson.cc  cranknicholson.h  helpers.cc  helpers.h  pybind_integrators.cc  rungekutta.cc  rungekutta.h  splitoperator.cc  splitoperator.h
endyn/linalg/: __init__.py
endyn/utils/: __init__.py  excite.py  multproc.py  psi4utils.py  scf.py
examples/: cis_d.ipynb
examples/.xyz/: LiCN.xyz  licn.xyz
examples/bitstrings/: bitstrings.ipynb
examples/cis(d)/: cis_d.ipynb  cis_d_test.py  licn.xyz
examples/cisd/: cisd.ipynb
examples/rcisd/: rcisd.ipynb
examples/tdci/: tdci.ipynb
examples/xyz/: Be.xyz
meta/: molecule.py  scf_tests.ipynb  shrd_mem.ipynb  splitoperator.f90
meta/.xyz/: HCHO.xyz  He.xyz
pyci/: __init__.py
pyci/configint/: __init__.py  bitstrings.py  cis.py  cis_d.py  cisd.py  csf.py  fast_cis_d.py  old_cis.py  rcisd.py  setup.py
pyci/integrators/: __init__.py  cranknicholson.py  exactprop.py  integrators.py  rungekutta.py  splitoperator.py
pyci/lib/: __init__.py
pyci/linalg/: __init__.py  blas.py  inv.f90  lapack.py
pyci/tdci/: .excite.py.swp  __init__.py  analysis.py  (+3 more)
pytdci/: __init__.py  _version.py  aoint.py  basis.py  propagators.py  slaterdets.py  timeprop.py
tests/: be.xyz  cis_d_test.py  et-pbdth.xyz  hcho.xyz  test_cimat.py  test_configint.py
(+54 files in other folders)
